# agentgrep

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
docs/: acceptance.md  safety.md
fixtures/discovery/: agent-session.jsonl
fixtures/discovery/docs/: stripe-notes.md
fixtures/discovery/src/billing/: stripe.ts
fixtures/discovery/src/server/: auth.ts
fixtures/discovery/tests/: billing.test.ts
fixtures/traces/: dogfood-session.jsonl
src/: bench.rs  cli.rs  command.rs  deps.rs  doctor.rs  exec.rs  file_view.rs  filters.rs  git_compact.rs  hooks.rs  index.rs  lib.rs  line_read.rs  main.rs  output.rs  parser.rs  repo_map.rs  run.rs  search.rs  shims.rs  tee.rs  test_runner.rs  trace.rs  tracking.rs
tests/: cli.rs
