[package]
name = "agentgrep"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "Token-efficient local command proxy for coding agents"
readme = "README.md"
repository = "https://github.com/winterrx/agentgrep"
license = "MIT"
keywords = ["cli", "search", "agents", "ripgrep", "developer-tools"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
ignore = "0.4"
regex = "1.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shell-words = "1.1"
thiserror = "2.0"

[dev-dependencies]
tempfile = "3.23"
